[tool.poetry]
name = "sofly"
version = "0.1.0"
description = "ERP de Sofly com Flask"
authors = ["Marco Aurélio Ribeiro Martins <129920356+Marco-Aurelio-Martins@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
